css/styles.css
@import url('https://fonts.googleapis.com/css2?family=Preahvihear&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Prompt:wght@400&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Gidugu&family=Josefin+Sans:wght@700&display=swap');

:root {
    /* header */
    --font-style: 'Preahvihear', sans-serif;
    --img-height: 1.8rem;
    --img-add-height: 2.2rem;
    --font-size: 2.2rem;
    --header-height: 10vh;
    --margin-left: 0.5rem;
    /* popup */
    --popup-width: fit-content;
    --popup-height: 60vh;
    --popup-top: 50%;
    --popup-left: 50%;
    --popup-border-radius: 20px;
    --popup-background-color: #f5f5f4;
    /* cogs popup */
    --cogs-popup-width: 20rem;
    --cogs-popup-height: 20rem;
    --cogs-form-button-width: 120px;
    /* scroll bar */
    --scrollbar-width: 15px;
    --scrollbar-thumb-color: #888;
    /* form */
    --form-font-family: 'Prompt', sans-serif;
    --form-font-size: 1.6rem;
    --form-span-margin: 1rem;
    --input-height: 5vh;
    --input-width: 80%;
    --input-margin: .8rem 0px;
    --input-padding: 0 1.5rem;
    --input-border-radius: 5px;
    /* buttons */
    --button-margin-div: 1rem;
    --button-height: 50px;
    --button-width: 8vw;
    --button-margin: 0 1rem;
    --button-border-radius: 5px;
    --button-background-color: #fde68a;
    --button-last-background-color: #dc2626;
    --button-hover-background-color: #fbbf24;
    --button-last-hover-background-color: #991b1b;
    /* main */
    --main-template-columns: repeat(auto-fit, 250px);
    --main-grid-gap: 1.5rem;
    --main-padding: 1rem;
    --main-margin: 0 auto;
    --main-width: 90%;
    /* main > div */
    --main-div-padding: 1rem;
    --main-div-border-radius: 5px;
    --main-div-background-color: #d6d3d1;
    --main-div-box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.2);
    --main-div-height: min-content;
    /* main > button */
    --main-button-height: 50px;
    --main-button-width: 50px;
    --main-button-margin: .5rem;
    --main-button-border-radius: 5px;
    --main-button-box-shadow: inset 0px 1px 1px white, 0px 1px 3px rgba(0, 0, 0, 0.5);
    /* media queries */
    /* media-query-1: 1500px; */
    --forms-buttons-margin: .4rem 0;
    --forms-buttons-width: 120px;
    /* media-query-2: 1000px; */
    --html-font-size: 80%;
    /* media-query-3: 750px; */
    --html-font-size: 75%;
    --popups-width: 90%;
    --container-direction: row;
    --container-span-margin: 0 0 1rem 0;
}

/* body */
body {
    height: 100vh;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

/* header */
header {
    user-select: none;
    display: grid;
    align-items: center;
    grid-template-columns: 1fr 1fr 1fr;
    height: var(--header-height);
}

header > div {
    display: flex;
    align-items: center;
    justify-content: flex-start;
    margin-left: var(--margin-left);
}

header > div > img {
    height: var(--img-height);
    width: auto;
}

header > div > span {
    font-family: var(--font-style);
    font-size: var(--font-size);
    margin-left: var(--margin-left);
}

header > img {
    height: var(--img-add-height);
    justify-self: center;
}

header > img:hover {
    cursor: pointer;
    animation: rotate 0.6s forwards;
}

@keyframes rotate {
    0% {
        transform: scale(1) rotate(0deg);
    }
    100% {
        transform: scale(1.2) rotate(180deg);
    }
}

/* popup */
#popup,
#cogsPopup {
    display: none;
    position: fixed;
    top: var(--popup-top);
    left: var(--popup-left);
    transform: translate(-50%, -50%);
    z-index: 100;
    width: var(--popup-width);
    height: var(--popup-height);
    background-color: var(--popup-background-color);
    border-radius: var(--popup-border-radius);
    overflow: auto;
}

/* scroll bar */
#popup::-webkit-scrollbar {
    width: var(--scrollbar-width);
}

#popup::-webkit-scrollbar-track {
    background: var(--popup-background-color);
}

#popup::-webkit-scrollbar-thumb {
    background: var(--scrollbar-thumb-color);
}

/* form */
.popupForm,
.cogsForm {
    height: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-between;
    font-family: var(--form-font-family);
    font-size: var(--form-font-size);
}

.popupForm > span,
.cogsForm > span {
    margin: var(--form-span-margin);
}

.popupForm > div:first-of-type {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.popupForm > div:first-of-type > input,
.cogsForm > input {
    height: var(--input-height);
    width: var(--input-width);
    margin: var(--input-margin);
    padding: var(--input-padding);
    border: none;
    border-radius: var(--input-border-radius);
}

.popupForm > div:first-of-type > input:focus,
.cogsForm > input:focus {
    outline: none;
}

/* buttons */
.popupForm > div:last-of-type,
.cogsForm > div:last-of-type {
    display: flex;
    flex-direction: row;
    margin: var(--button-margin-div);
}

.popupForm > div:last-of-type > button,
.cogsForm > div:last-of-type > button {
    height: var(--button-height);
    width: var(--button-width);
    margin: var(--button-margin);
    border: none;
    border-radius: var(--button-border-radius);
    background-color: var(--button-background-color);
    box-shadow: inset 0px 1px 1px white, 0px 1px 3px rgba(0, 0, 0, 0.5);
}

.popupForm > div:last-of-type > button:last-child,
.cogsForm > div:last-of-type > button:last-child {
    background-color: var(--button-last-background-color);
}

.popupForm > div:last-of-type > button:hover,
.cogsForm > div:last-of-type > button:hover {
    cursor: pointer;
    transition: .6s;
    background-color: var(--button-hover-background-color);
}

.popupForm > div:last-of-type > button:last-child:hover,
.cogsForm > div:last-of-type > button:last-child:hover {
    background-color: var(--button-last-hover-background-color);
}

/* cogs popup */
#cogsPopup {
    width: var(--cogs-popup-width);
    height: var(--cogs-popup-height);
}

.cogsForm > div:last-of-type > button {
    width: var(--cogs-form-button-width);
}

/* main */
main {
    display: grid;
    grid-template-columns: var(--main-template-columns);
    grid-gap: var(--main-grid-gap);
    padding: var(--main-padding);
    margin: var(--main-margin);
    width: var(--main-width);
}

main > div {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-between;
    padding: var(--main-div-padding);
    border-radius: var(--main-div-border-radius);
    background-color: var(--main-div-background-color);
    box-shadow: var(--main-div-box-shadow);
    height: var(--main-div-height);
}

main > div > div {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: flex-end;
    width: 100%;
}

main > div > div > button {
    display: flex;
    align-items: center;
    justify-content: center;
    height: var(--main-button-height);
    width: var(--main-button-width);
    margin: var(--main-button-margin);
    border: none;
    border-radius: var(--main-button-border-radius);
    box-shadow: var(--main-button-box-shadow);
}

main > div > div > button > img {
    height: 90%;
    width: auto;
}
main > div > div > button:hover {
    cursor: pointer;
    transition: .6s;
}

.cogs {
    background-color: var(--button-background-color);
}

.cogs:hover {
    background-color: var(--button-hover-background-color);
}

.deleteButton {
    background-color: var(--button-last-background-color);
}

.deleteButton:hover {
    background-color: var(--button-last-hover-background-color);
}

/* footer */
footer > div:first-of-type {
    font-size: 1.2rem;
    font-family: 'Josefin Sans', sans-serif;
}


footer > div:nth-child(2) {
    display: flex;
}


footer > div {
    font-size: 0.9rem;
    margin: 1.6rem;
}
footer{
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: row;
    height: 10vh;
}
.icon{
    width: 35px;
    height: 35px;
    border-radius: 50px;
    background: #fff;
    margin: 0 20px 20px 20px;
    text-align: center;
    font-size: 25px;
    line-height: 37px;
    font-family: sans-serif;
    overflow: hidden;
    box-shadow: 2px 5px 10px rgba(150, 150, 150, .3);
    transition: all .1s ease-out;
}
.icon:hover{
    width: 200px;
    cursor: pointer;
    display: flex;
    align-items: center;
    justify-content: space-evenly;
    color: #fff;
}
.icon:hover i{
    color: #fff;
}
.icon .fa-linkedin-in{
    color: #0077B5;
}
.lnk:hover{
    background: #0077B5;
}
.icon .fa-github{
    color: #000;
}
.git:hover{
    background: #000;
}
a{
    text-decoration: none;
    color: #fff;
}

/* media queries */
@media screen and (max-width: 1500px) {
    .popupForm > div:last-of-type,
    .cogsForm > div:last-of-type {
        flex-direction: column;
    }
    .popupForm > div:last-of-type > button,
    .cogsForm > div:last-of-type > button {
        margin: var(--forms-buttons-margin);
        width: var(--forms-buttons-width);
    }
}

@media screen and (max-width: 1000px) {
    html {
        font-size: var(--html-font-size);
    }
}

@media screen and (max-width: 750px) {
    html {
        font-size: var(--html-font-size);
    }
    #popup,
    #cogsPopup {
        width: var(--popups-width);
    }
    .container {
        flex-direction: var(--container-direction);
    }
    .container > span {
        margin: var(--container-span-margin);
    }
    footer {
        flex-direction: column;
    }
    footer > div {
        margin: .5rem;
    }
}

